...
                    .add(OnQuerySearchMovies(query));
                context
                    .read<SearchTvShowsBloc>()
                    .add(OnQuerySearchTvShows(query));
              },
              decoration: InputDecoration(
                hintText: 'Search title',
                prefixIcon: Icon(Icons.search),
                border: OutlineInputBorder(),
              ),
              textInputAction: TextInputAction.search,
            ),
            SizedBox(height: 16),
...
